@@ -3,13 +3,17 @@ module github.com/yliu7949/KouShare-dl
 go 1.19
 
 require (
+	github.com/fatih/color v1.13.0
 	github.com/spf13/cobra v1.5.0
 	github.com/tidwall/gjson v1.14.3
 )
 
 require (
 	github.com/inconshreveable/mousetrap v1.0.1 // indirect
+	github.com/mattn/go-colorable v0.1.13 // indirect
+	github.com/mattn/go-isatty v0.0.16 // indirect
 	github.com/spf13/pflag v1.0.5 // indirect
 	github.com/tidwall/match v1.1.1 // indirect
 	github.com/tidwall/pretty v1.2.0 // indirect
+	golang.org/x/sys v0.0.0-20220818161305-2296e01440c6 // indirect
 )
