@@ -6,27 +6,37 @@ import (
 
 	//"github.com/pkg/profile"
 	"github.com/spf13/cobra"
-	. "github.com/yliu7949/KouShare-dl/cmd/ks"
+	ks "github.com/yliu7949/KouShare-dl/cmd/ks"
+	"github.com/yliu7949/KouShare-dl/internal/color"
 )
 
 const version = "v0.8.5"
 
 func main() {
 	//defer profile.Start().Stop()
-	var rootCmd = &cobra.Command{Use: "ks"}
-	rootCmd.AddCommand(InfoCmd(), SaveCmd(), RecordCmd(), MergeCmd(), SlideCmd(), LoginCmd(), LogoutCmd(), VersionCmd())
+	var noColor bool
+	var rootCmd = &cobra.Command{
+		Use: "ks",
+		PersistentPreRun: func(cmd *cobra.Command, args []string) {
+			color.DisableColor(noColor)
+		},
+	}
+	rootCmd.AddCommand(ks.InfoCmd(), ks.SaveCmd(), ks.RecordCmd(), ks.MergeCmd(), ks.SlideCmd(), ks.LoginCmd(), ks.LogoutCmd(), VersionCmd())
 	rootCmd.SetVersionTemplate(`{{printf "KouShare-dl %s\n" .Version}}`)
 	rootCmd.Version = version
+
+	rootCmd.PersistentFlags().BoolVar(&noColor, "nocolor", false, "指定是否不使用彩色输出")
 	_ = rootCmd.Execute()
 }
 
+// VersionCmd 输出KouSHare-dl的版本号，并检查最新版本
 func VersionCmd() *cobra.Command {
 	var cmdVersion = &cobra.Command{
 		Use:   "version",
 		Short: "输出版本号，并检查最新版本",
 		Long:  `输出KouSHare-dl的版本号，并检查最新版本`,
 		Run: func(cmd *cobra.Command, args []string) {
-			fmt.Println("KouShare-dl", version)
+			fmt.Println(color.Emphasize("KouShare-dl " + version))
 			latestVersion, _ := net.LookupTXT("ks-version.gleamoe.com")
 			if latestVersion[0] != version {
 				fmt.Println("发现新版本：KouShare-dl", latestVersion[0])
